refactor(cscorelib): move legacy me.mrCookieSlime package into core/ layout + Java-8 port